# lambda-breakout

./: package-lock.json  package.json
backend/: main.py  pyproject.toml
src/: App.vue  main.ts
src/assets/: main.css
