[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["RogerGabeller-ml <78610776+RogerGabeller-ml@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
